Finalize schema and audit consolidation with comprehensive updates
- Completed the transition to a unified audit logging system, removing legacy audit files and integrating logging directly into the main database.
- Updated all relevant API calls to utilize the new logging structure, ensuring automatic context extraction for user actions.
- Renamed schema files to reflect the migration from Clerk to WorkOS, preserving legacy schemas for future reference.
- Cleaned up deprecated code and tests, enhancing overall code maintainability and readability.
- Updated service health checks and privacy policy documentation to align with the new architecture.

--- a/src/content/privacy/en.mdx
+++ b/src/content/privacy/en.mdx
@@ -55,7 +55,7 @@ Legal bases include contract performance, legitimate interests (security, produc
 
 ## 4) Sharing
 
-- With processors who help us run the service (e.g., Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). They act under contract and can’t use data for their own purposes.
+- With processors who help us run the service (e.g., Stripe, WorkOS, Vercel, Neon, Novu, PostHog, Resend, Upstash). They act under contract and can't use data for their own purposes.
 - If required by law or to protect rights and safety
 - As part of a corporate transaction, with notice
 
