--- a/src/content/privacy/es.mdx
+++ b/src/content/privacy/es.mdx
@@ -55,7 +55,7 @@ Bases legales: ejecución de contrato, intereses legítimos (seguridad, mejora),
 
 ## 4) Compartición
 
-- Con encargados que nos ayudan a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Actúan bajo contrato y no pueden usar datos para fines propios.
+- Con encargados que nos ayudan a operar (Stripe, WorkOS, Vercel, Neon, Novu, PostHog, Resend, Upstash). Actúan bajo contrato y no pueden usar datos para fines propios.
 - Si la ley lo requiere o para proteger derechos y seguridad
 - En una transacción corporativa, con aviso previo
 
