--- a/src/content/privacy/pt-BR.mdx
+++ b/src/content/privacy/pt-BR.mdx
@@ -55,7 +55,7 @@ Bases legais: execução de contrato, interesses legítimos (segurança, melhori
 
 ## 4) Compartilhamento
 
-- Com operadores que nos ajudam a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
+- Com operadores que nos ajudam a operar (Stripe, WorkOS, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
 - Quando exigido por lei ou para proteger direitos e segurança
 - Em transação societária, com aviso
 
