--- a/src/content/privacy/pt.mdx
+++ b/src/content/privacy/pt.mdx
@@ -55,7 +55,7 @@ Bases legais: execução de contrato, interesses legítimos (segurança, melhori
 
 ## 4) Partilha
 
-- Com subcontratantes que ajudam a operar (Stripe, Clerk, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
+- Com subcontratantes que ajudam a operar (Stripe, WorkOS, Vercel, Neon, Novu, PostHog, Resend, Upstash). Atuam sob contrato e não podem usar dados para fins próprios.
 - Se exigido por lei ou para proteger direitos e segurança
 - Numa transação societária, com aviso
 
