docs: Update legal and policy documents for clarity and compliance
- Revised the legal page description to specify Eleva.care as a digital health platform.
- Enhanced the expert agreement to clarify the roles and responsibilities of Eleva.care and independent professionals.
- Updated payment policies to reflect the nature of services provided through the platform.
- Improved privacy and terms documentation to emphasize Eleva.care's non-provider status and compliance with regulations.
- Added definitions for key terms related to the platform's operations and services.

--- a/src/content/expert-agreement/en.mdx
+++ b/src/content/expert-agreement/en.mdx
@@ -14,17 +14,20 @@ _Effective Date: April 16, 2025_
 
 Welcome to Eleva.care. This agreement explains, in plain language, how we work together when you offer services on our platform.
 
+Eleva.care operates a digital health platform that enables the delivery of remote healthcare services by independent, licensed professionals and functions within the framework of digital health and telemedicine activities as defined under applicable Portuguese law, without itself providing clinical care.
+
 ## 1) Your status (independent professional)
 
-- You are an independent, licensed care professional—not our employee, partner, or agent
-- You run your own practice: schedule, rates, policies, taxes, insurance, and regulatory compliance are yours to manage
-- We don’t supervise your clinical decisions or provide medical services
+- You are an independent, licensed care professional—not our employee, partner, or agent.
+- You run your own professional practice and remain responsible for your clinical decisions, professional licensing, insurance, taxes, and compliance with clinical and ethical obligations. Eleva.care remains responsible for the organizational, technical, and administrative compliance of the digital health platform it operates.
+- Eleva.care does not interfere with or influence the clinical judgment, diagnosis, or treatment decisions of experts.
 
 ## 2) Professional requirements
 
-- Keep your license(s) valid and in good standing; tell us if anything changes
-- Maintain professional liability (malpractice) insurance (keep proof available)
-- Provide care consistent with law, ethics, informed consent, and clinical standards; keep accurate records and protect privacy
+- Keep your license(s) valid and in good standing; tell us if anything changes.
+- Experts remain solely responsible for maintaining valid professional registration, licensing, and authorization to provide healthcare services under applicable law.
+- Maintain professional liability (malpractice) insurance (keep proof available).
+- Provide care consistent with law, ethics, informed consent, and clinical standards; keep accurate records and protect privacy.
 
 ## 3) Data roles (GDPR/LGPD)
 
@@ -40,7 +43,7 @@ Welcome to Eleva.care. This agreement explains, in plain language, how we work t
 - Payments via Stripe Connect; patient messaging and notifications
 - Technical support, plus GDPR assistance (when appropriate)
 
-We do not provide medical advice or supervision, verify your credentials (you self‑declare), provide malpractice insurance, referrals, or billing/coding services.
+We do not provide medical advice or supervision, provide malpractice insurance, referrals, or billing/coding services. Experts self‑declare their credentials and professional status; Eleva.care may request documentation and perform reasonable checks where required for platform integrity, regulatory compliance, or risk management.
 
 ## 5) Pricing, fees, and payouts
 
@@ -69,9 +72,9 @@ We do not provide medical advice or supervision, verify your credentials (you se
 
 ## 9) Liability
 
-- You are solely responsible for the care you provide and for maintaining required insurance
-- Eleva.care’s responsibility is limited to operating the technology platform and reasonable security measures
-- You agree to indemnify Eleva.care for claims arising from your medical practice, regulatory breaches, or violations of this agreement
+- You are solely responsible for the clinical care you provide, clinical decisions, patient outcomes, and for maintaining required insurance.
+- Eleva.care is responsible for the operation, security, and regulatory compliance of the digital health platform. Eleva.care assumes organizational, technical, and administrative responsibility for the platform in accordance with applicable Portuguese and EU regulations, while Experts remain solely responsible for clinical decisions and outcomes.
+- You agree to indemnify Eleva.care for claims arising from your medical practice, regulatory breaches, or violations of this agreement.
 
 ## 10) IP, confidentiality, and notices
 
