--- a/src/content/payment-policies/en.mdx
+++ b/src/content/payment-policies/en.mdx
@@ -14,9 +14,9 @@ _Effective Date: June 3, 2025_
 
 This page explains how payments work on Eleva.care in plain language.
 
-## 1) What you’re paying for
+## 1) What you're paying for
 
-- Eleva.care is a trusted platform. Payments go to independent, licensed care experts for their services.
+- Eleva.care is a digital health platform. Payments are for healthcare services delivered by independent, licensed care experts via the Eleva.care platform.
 - Pricing shown at booking includes everything (no hidden fees):
   - Expert receives 85% of the appointment price
   - Eleva.care retains 15% as a platform fee (covers tech, infra, support, marketing, Stripe fees)
