--- a/src/content/privacy/en.mdx
+++ b/src/content/privacy/en.mdx
@@ -16,7 +16,7 @@ We respect your privacy and keep things simple. This page explains what we colle
 
 ## 1) Who we are and our role
 
-- Eleva.care is a healthcare technology platform. We connect clients with independent, licensed care experts. We are not a healthcare provider.
+- Eleva.care is a digital health platform that enables the delivery of remote healthcare services by independent, licensed care experts. Eleva.care does not provide clinical care; healthcare services are delivered by independent experts through the platform.
 - We act as:
   - Data Controller for platform operations (accounts, bookings, payments, support, analytics)
   - Data Processor for clinical notes and files created by experts (they are the Controller; we provide secure storage)
