--- a/src/content/terms/en.mdx
+++ b/src/content/terms/en.mdx
@@ -14,18 +14,26 @@ _Effective Date:_ April 16, 2025
 
 Welcome to **Eleva.care** (operated by **Búzios e Tartarugas, Lda.**). By using Eleva.care, you agree to these Terms. Please read them carefully.
 
+## Definitions
+
+- **Platform** means the Eleva.care digital health platform, including websites, applications, and related infrastructure operated by Eleva.care.
+- **Expert** means an independent, duly licensed healthcare professional who offers remote healthcare services through the Platform.
+- **Teleconsultation** means the remote provision of healthcare services by an Expert to a client through the Eleva.care platform, using digital communication tools.
+- **Clinical Care** means diagnosis, treatment, or other healthcare services provided by an Expert to a client.
+
 ## 1) What Eleva.care is (and isn't)
 
-- Eleva.care is a trusted platform that connects people seeking care with independent, licensed care experts.
-- Eleva.care is not a clinic, medical practice, or healthcare provider. We don't employ, supervise, or control experts, and we don't provide medical advice, diagnosis, or treatment.
-- Experts on Eleva Care are independent, licensed in their jurisdictions, hold their own professional liability insurance, and are solely responsible for the care they provide.
+- Eleva.care is a digital health platform that enables the delivery of remote healthcare services (teleconsultations / telemedicine) by independent, licensed professionals.
+- Eleva.care does not provide clinical care or medical treatment. We do not employ experts and do not interfere with or supervise their clinical judgment.
+- Experts on Eleva.care are independent, licensed in their jurisdictions, hold their own professional liability insurance, and are solely responsible for clinical decisions and patient outcomes.
+- Eleva.care assumes organizational, technical, and administrative responsibility for operating the digital health platform, in accordance with applicable Portuguese and EU regulations.
 
 ## 2) What we provide
 
 - Accounts, identity verification, and support
 - For clients: search and discovery, booking and scheduling, payments (via Stripe), secure messaging, and your appointment history
 - For experts: profile management, scheduling, encrypted notes (you control the content), payments and payouts (via Stripe Connect), secure client messaging, and encrypted file storage
-- We do not provide medical services or verify medical credentials beyond expert self‑certification
+- Eleva.care does not provide medical services. Experts self‑declare their credentials and professional status; Eleva.care may request documentation and perform reasonable checks where required for platform integrity, regulatory compliance, or risk management.
 
 Our features may change over time.
 
@@ -50,8 +58,8 @@ We may suspend or terminate access if these rules are violated.
 ## 5) Clients
 
 - You choose your expert and should check their credentials and licensing
-- Your care relationship is with the expert, not Eleva.care
-- Eleva.care isn't responsible for the medical care you receive
+- The healthcare relationship is established directly between you and the selected Expert. Eleva.care facilitates scheduling, payment, and technical access to the remote consultation but does not itself enter into a healthcare provider–patient relationship with you.
+- Eleva.care is not responsible for clinical decisions or medical outcomes arising from the care provided by experts.
 
 ## 6) Experts
 
@@ -83,8 +91,9 @@ The Eleva.care platform, including text, graphics, logos, and software, is owned
 
 To the fullest extent permitted by law:
 
-- We provide technology platform services "as is" and are responsible only for operating the platform
-- We are not responsible for any medical care, advice, diagnosis, treatment, outcomes, or disputes between you and an expert
+- Eleva.care is responsible for the operation, security, and regulatory compliance of the digital health platform. Eleva.care assumes organizational, technical, and administrative responsibility for the platform in accordance with applicable Portuguese and EU regulations.
+- Eleva.care is not responsible for clinical decisions, medical outcomes, or disputes between you and an expert arising from the clinical care provided.
+- Eleva.care maintains internal procedures for platform security, incident response, and risk management related to the operation of the digital health platform.
 
 ### Emergencies
 
