--- a/src/content/trust/dpa/en.mdx
+++ b/src/content/trust/dpa/en.mdx
@@ -14,9 +14,11 @@ _Effective Date: April 16, 2025_
 
 This DPA explains how Eleva.care handles personal data—clearly and simply.
 
+Eleva.care is a digital health platform that enables the provision of remote healthcare services by independent professionals. Eleva.care does not deliver clinical care. Eleva.care's regulatory status under applicable Portuguese and EU health regulations (e.g., registration as a telemedicine platform) is distinct from its GDPR data protection roles, and Eleva.care will comply with applicable health regulations.
+
 ## 1) Who does what
 
-- Eleva.care is a healthcare technology marketplace. We are not a healthcare provider.
+- Eleva.care is a digital health platform that enables remote healthcare services by independent, licensed professionals. Eleva.care does not provide clinical care.
 - Two roles:
   - Controller (platform operations: accounts, bookings, payments, analytics, support)
   - Processor (clinical notes/files that experts create: we store securely on their instructions)
@@ -67,8 +69,8 @@ This DPA explains how Eleva.care handles personal data—clearly and simply.
 
 ## 10) Liability
 
-- Eleva.care: liable for platform tech and security as described
-- Experts: liable for clinical decisions, patient outcomes, and compliance as Controllers
+- Eleva.care: responsible for platform operation, security, and organizational/technical/administrative compliance of the digital health platform as described.
+- Experts: liable for clinical decisions, patient outcomes, and compliance as Controllers of clinical data.
 
 ## 11) Updates, law, and disputes
 
