--- a/src/content/trust/security/en.mdx
+++ b/src/content/trust/security/en.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 
 _Last updated: October 1, 2025_
 
-We take security seriously. Below is a clear, concise overview of how we protect your data and run a secure platform.
+We take security seriously. Below is a clear, concise overview of how we protect your data and run a secure digital health platform.
 
 ## 1) Compliance at the core
 
@@ -73,6 +73,7 @@ Notes:
 
 - 24/7 monitoring, documented runbooks, regulatory notifications (GDPR 72h, LGPD ANPD)
 - Post‑incident reviews and user communications
+- Eleva.care maintains internal procedures for platform security, incident response, and risk management related to operation of the digital health platform
 
 ## 6) People and third parties
 
